--- a/public/styles.css
+++ b/public/styles.css
@@ -106,6 +106,7 @@ nav ul li a:hover::after {
     width:100%;
     height: 100vh;
 } */
+
  .overlay{
     background: radial-gradient(rgba(66, 61, 49, 0.5), rgba(0,0,0,0.9)); 
     opacity: 0.6;
@@ -447,7 +448,7 @@ hr{
 .card-7{
     display: none;
 }
-.card-1,.card-2, .card-3, .card-4, .card-5, .card-6{
+.card-1,.card-2, .card-3, .card-4, .card-5, .card-6, .card-7{
     margin-top: 0px;
 }
 
