--- a/view/index.html
+++ b/view/index.html
@@ -131,8 +131,68 @@
         <section id="projects">
             
                 <h2 class="projects"> MY PROJECTS </h2>  
-                <span class="data">HTML, CSS, React, Node.js, Express.js, MongoDB database, Mocha, Chai.</span>
+                <span class="data">HTML, CSS, Node.js, Express.js, MongoDB database.</span>
                     <div id="card-1" class="card-1 active-c">
+                        <div id="p-card" >             
+                        <div  class="project-tile a">  
+                            <div class="window">
+                                <img id="project-pic" src="../pictures/Z-library.jpg"  alt="Zory's Library"/>                                
+                            </div>  <hr>  Zory's Library
+                            <div id="filter">
+                                <a href="https://zorys-library.zorrey.repl.co/" target="_blank">                    
+                                <hr> 
+                                <h4>JavaScript <br> Zory's Library</h4>
+                                <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
+                                <hr> </a>
+                            </div>     
+                        </div>	
+                        <div class="column">
+                         	
+                <!--         <div  class="project-tile b" > 
+                            <div class="window">
+                                <img id="project-pic" src="../pictures/Ex Tracker.jpg"  alt="Exercise tracker"/>
+                            </div>                                 
+                                <hr>Exercise tracker
+                            <div id="filter">
+                                <a href="https://exercisetracker.zorrey.repl.co" target="_blank">                    
+                                <hr> 
+                                <h4>Exercise tracker</h4>
+                                <p> This full stack JavaScript app is built with Node.js, Express.js,Mongoose-MongoDB database and tested with Mocha and Chai.</p> 
+                                <hr> </a>
+                            </div> 
+                        </div>
+                        <div  class="project-tile b"> 
+                            <div class="window">
+                                <img id="project-pic" src="../pictures/library.jpg"  alt="Personal Library"/>
+                            </div>               
+                            
+                            <hr> Personal Library
+                        <div id="filter">
+                            <a href="https://library-main.zorrey.repl.co" target="_blank">                    
+                            <hr> 
+                            <h4>Personal Library</h4>
+                            <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB database and tested with Mocha and Chai.</p> 
+                            <hr> </a>
+                        </div> 
+                        </div>	  -->
+                        </div>	                               
+                        </div> 
+
+                        <div class="pr-list">
+                        <ul  class="next"> 
+                        <li><a class="btn btn-light" id="inv" onclick="openPCard('card-6', 'card-7')">PREVIOUS</a></li>                        
+                        <li><a class="page active" onclick="openPCard('card-1', 'card-1')" >1</a></li>            
+                        <li><a class="page" onclick="openPCard('card-2', 'card-1')">2</a></li>            
+                        <li><a class="page" onclick="openPCard('card-3', 'card-1')">3</a></li>            
+                        <li><a class="page" onclick="openPCard('card-4', 'card-1')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-1')">5</a></li>            
+                        <li><a class="page" onclick="openPCard('card-6', 'card-1')">6</a></li>         
+                        <li><a class="page" onclick="openPCard('card-7', 'card-1')">7</a></li>         
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>               
+                        </ul> 
+                        </div>
+                    </div><!-- end project card 1 -->
+                    <div id="card-2" class="card-2 active-c">
                         <div id="p-card" >             
                         <div  class="project-tile a">  
                             <div class="window">
@@ -180,19 +240,20 @@
 
                         <div class="pr-list">
                         <ul  class="next"> 
-                        <li><a class="btn btn-light" id="inv" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li>                        
-                        <li><a class="page active" onclick="openPCard('card-1', 'card-1')" >1</a></li>            
-                        <li><a class="page" onclick="openPCard('card-2', 'card-1')">2</a></li>            
-                        <li><a class="page" onclick="openPCard('card-3', 'card-1')">3</a></li>            
-                        <li><a class="page" onclick="openPCard('card-4', 'card-1')">4</a></li>            
-                        <li><a class="page" onclick="openPCard('card-5', 'card-1')">5</a></li>            
-                        <li><a class="page" onclick="openPCard('card-6', 'card-1')">6</a></li>         
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>               
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-1', 'card-2')">PREVIOUS</a></li>                        
+                        <li><a class="page" onclick="openPCard('card-1', 'card-1')" >1</a></li>            
+                        <li><a class="page active" onclick="openPCard('card-2', 'card-2')">2</a></li>            
+                        <li><a class="page" onclick="openPCard('card-3', 'card-2')">3</a></li>            
+                        <li><a class="page" onclick="openPCard('card-4', 'card-2')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-2')">5</a></li>            
+                        <li><a class="page" onclick="openPCard('card-6', 'card-2')">6</a></li>         
+                        <li><a class="page" onclick="openPCard('card-7', 'card-2')">7</a></li>         
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-2')">NEXT</a></li>               
                         </ul> 
                         </div>
-                    </div><!-- end project card 1 -->
+                    </div><!-- end project card 2 -->
 
-                    <div id="card-2" class="card-2">
+                    <div id="card-3" class="card-3">
                       <div id="p-card">  
                         
                         <div  class="project-tile a">  
@@ -244,19 +305,20 @@
                     </div> 
                     <div  class="pr-list">
                         <ul id="row" class="next">
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-1', 'card-2')">PREVIOUS</a></li>  
-                        <li><a class="page" onclick="openPCard('card-1', 'card-2')" >1</a></li>            
-                        <li><a class="page active" onclick="openPCard('card-2', 'card-2')">2</a></li>            
-                        <li><a class="page" onclick="openPCard('card-3', 'card-2')">3</a></li>            
-                        <li><a class="page" onclick="openPCard('card-4', 'card-2')">4</a></li>            
-                        <li><a class="page" onclick="openPCard('card-5', 'card-2')">5</a></li>            
-                        <li><a class="page" onclick="openPCard('card-6', 'card-2')">6</a></li>              
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-2')">NEXT</a></li>               
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-3')">PREVIOUS</a></li>  
+                        <li><a class="page" onclick="openPCard('card-1', 'card-3')" >1</a></li>            
+                        <li><a class="page" onclick="openPCard('card-2', 'card-3')">2</a></li>            
+                        <li><a class="page active" onclick="openPCard('card-3', 'card-3')">3</a></li>            
+                        <li><a class="page" onclick="openPCard('card-4', 'card-3')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-3')">5</a></li>            
+                        <li><a class="page" onclick="openPCard('card-6', 'card-3')">6</a></li>              
+                        <li><a class="page" onclick="openPCard('card-7', 'card-3')">7</a></li>              
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-3')">NEXT</a></li>               
                         </ul> 
                     </div>
-                    </div><!-- end project card 2 -->  
+                    </div><!-- end project card 3 -->  
 
-                    <div id="card-3" class="card-3">
+                    <div id="card-4" class="card-4">
                       <div id="p-card">  
                         
                             <div  class="project-tile a">  
@@ -306,19 +368,20 @@
                       </div> 
                     <div  class="pr-list">
                         <ul id="row" class="next">
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-3')">PREVIOUS</a></li>    
-                        <li><a class="page" onclick="openPCard('card-1', 'card-3')" >1</a></li>            
-                        <li><a class="page" onclick="openPCard('card-2', 'card-3')">2</a></li>            
-                        <li><a class="page active" onclick="openPCard('card-3', 'card-3')">3</a></li>            
-                        <li><a class="page" onclick="openPCard('card-4', 'card-3')">4</a></li>            
-                        <li><a class="page" onclick="openPCard('card-5', 'card-3')">5</a></li>            
-                        <li><a class="page" onclick="openPCard('card-6', 'card-3')">6</a></li>            
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-3')">NEXT</a></li>               
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-4')">PREVIOUS</a></li>    
+                        <li><a class="page" onclick="openPCard('card-1', 'card-4')" >1</a></li>            
+                        <li><a class="page" onclick="openPCard('card-2', 'card-4')">2</a></li>            
+                        <li><a class="page" onclick="openPCard('card-3', 'card-4')">3</a></li>            
+                        <li><a class="page active" onclick="openPCard('card-4', 'card-4')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-4')">5</a></li>            
+                        <li><a class="page" onclick="openPCard('card-6', 'card-4')">6</a></li>            
+                        <li><a class="page" onclick="openPCard('card-7', 'card-4')">7</a></li>            
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-5', 'card-4')">NEXT</a></li>               
                         </ul> 
                     </div>
                     </div><!-- end project card 3 -->  
 
-                    <div id="card-4" class="card-4">
+                    <div id="card-5" class="card-5">
                         <div id="p-card">             
                         <div  class="project-tile a">  
                             <div class="window">
@@ -364,19 +427,20 @@
                         </div> <!-- end <div id="p-card">  -->
                         <div  class="pr-list">
                             <ul id="row" class="next">
-                            <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-4')">PREVIOUS</a></li> 
-                            <li><a class="page" onclick="openPCard('card-1', 'card-4')" >1</a></li>            
-                            <li><a class="page" onclick="openPCard('card-2', 'card-4')">2</a></li>            
-                            <li><a class="page" onclick="openPCard('card-3', 'card-4')">3</a></li>            
-                            <li><a class="page active" onclick="openPCard('card-4', 'card-4')">4</a></li>            
-                            <li><a class="page" onclick="openPCard('card-5', 'card-4')">5</a></li>            
-                            <li><a class="page" onclick="openPCard('card-6', 'card-4')">6</a></li>               
-                            <li><a class="btn btn-light" id="next" onclick="openPCard('card-5', 'card-4')">NEXT</a></li>                        
+                            <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li> 
+                            <li><a class="page" onclick="openPCard('card-1', 'card-5')" >1</a></li>            
+                            <li><a class="page" onclick="openPCard('card-2', 'card-5')">2</a></li>            
+                            <li><a class="page" onclick="openPCard('card-3', 'card-5')">3</a></li>            
+                            <li><a class="page" onclick="openPCard('card-4', 'card-5')">4</a></li>            
+                            <li><a class="page active" onclick="openPCard('card-5', 'card-5')">5</a></li>            
+                            <li><a class="page" onclick="openPCard('card-6', 'card-5')">6</a></li>               
+                            <li><a class="page" onclick="openPCard('card-7', 'card-5')">7</a></li>               
+                            <li><a class="btn btn-light" id="next" onclick="openPCard('card-6', 'card-5')">NEXT</a></li>                        
                         </ul> 
                         </div>
                     </div><!-- end project card 4-->  
                     
-                    <div id="card-5" class="card-5">
+                    <div id="card-6" class="card-6">
                         <div id="p-card"> 
                             <div  class="project-tile a">
                                 <div class="window">
@@ -425,19 +489,20 @@
                 </div> 
                 <div  class="pr-list">
                     <ul id="row" class="next">
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li>   
-                        <li><a class="page" onclick="openPCard('card-1', 'card-5')" >1</a></li>            
-                        <li><a class="page" onclick="openPCard('card-2', 'card-5')">2</a></li>            
-                        <li><a class="page" onclick="openPCard('card-3', 'card-5')">3</a></li>            
-                        <li><a class="page" onclick="openPCard('card-4', 'card-5')">4</a></li>            
-                        <li><a class="page active" onclick="openPCard('card-5', 'card-5')">5</a></li>            
-                        <li><a class="page" onclick="openPCard('card-6', 'card-5')">6</a></li>             
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-6', 'card-5')">NEXT</a></li>               
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-5', 'card-6')">PREVIOUS</a></li>   
+                        <li><a class="page" onclick="openPCard('card-1', 'card-6')" >1</a></li>            
+                        <li><a class="page" onclick="openPCard('card-2', 'card-6')">2</a></li>            
+                        <li><a class="page" onclick="openPCard('card-3', 'card-6')">3</a></li>            
+                        <li><a class="page" onclick="openPCard('card-4', 'card-6')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-6')">5</a></li>            
+                        <li><a class="page active" onclick="openPCard('card-6', 'card-6')">6</a></li>             
+                        <li><a class="page" onclick="openPCard('card-7', 'card-6')">7</a></li>             
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-7', 'card-6')">NEXT</a></li>               
                     </ul> 
                 </div>
                     </div><!-- end project card 5-->  
 
-                    <div id="card-6" class="card-6">
+                    <div id="card-7" class="card-7">`
                         <div id="p-card">             
                             <div  class="project-tile a" > 
                                 <div class="window">
@@ -501,15 +566,16 @@
                 </div> 
                 <div  class="pr-list">
                     <ul id="row" class="next">
-                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-5', 'card-6')">PREVIOUS</a></li>   
-                        <li><a class="page" onclick="openPCard('card-1', 'card-6')" >1</a></li>            
-                        <li><a class="page" onclick="openPCard('card-2', 'card-6')">2</a></li>            
-                        <li><a class="page" onclick="openPCard('card-3', 'card-6')">3</a></li>            
-                        <li><a class="page" onclick="openPCard('card-4', 'card-6')">4</a></li>            
-                        <li><a class="page" onclick="openPCard('card-5', 'card-6')">5</a></li>            
-                        <li><a class="page active" onclick="openPCard('card-6', 'card-6')">6</a></li>  
+                        <li><a class="btn btn-light" id="next" onclick="openPCard('card-6', 'card-7')">PREVIOUS</a></li>   
+                        <li><a class="page" onclick="openPCard('card-1', 'card-7')" >1</a></li>            
+                        <li><a class="page" onclick="openPCard('card-2', 'card-7')">2</a></li>            
+                        <li><a class="page" onclick="openPCard('card-3', 'card-7')">3</a></li>            
+                        <li><a class="page" onclick="openPCard('card-4', 'card-7')">4</a></li>            
+                        <li><a class="page" onclick="openPCard('card-5', 'card-7')">5</a></li>            
+                        <li><a class="page" onclick="openPCard('card-6', 'card-7')">6</a></li>  
+                        <li><a class="page active" onclick="openPCard('card-7', 'card-7')">7</a></li>  
                         
-                        <li><a class="btn btn-light" id="inv" onclick="openPCard('card-6', 'card-5')">NEXT</a></li>        
+                        <li><a class="btn btn-light" id="inv" onclick="openPCard('card-1', 'card-7')">NEXT</a></li>        
                                         
                     </ul> 
                 </div>
